[gd_scene load_steps=16 format=2]

[ext_resource path="res://Resource/Buttons/Return-1.png" type="Texture" id=1]
[ext_resource path="res://Resource/Buttons/Play-1.png" type="Texture" id=2]
[ext_resource path="res://Game/Characters/Players/Blueberry/BlueberryAvatar.tscn" type="PackedScene" id=4]
[ext_resource path="res://Game/UI/Screen/CharacterScreen/CharacterScreen.gd" type="Script" id=5]
[ext_resource path="res://Resource/Buttons/Return-2.png" type="Texture" id=6]
[ext_resource path="res://Resource/Buttons/Play-2.png" type="Texture" id=7]
[ext_resource path="res://Resource/Buttons/Maps-1.png" type="Texture" id=8]
[ext_resource path="res://Game/Characters/Wallet/Wallet.tscn" type="PackedScene" id=9]
[ext_resource path="res://Resource/Fonts/Bungee-Regular.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://Resource/Buttons/Maps-2.png" type="Texture" id=11]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 1.0
expand_margin_right = 1.0
expand_margin_top = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.635294, 0.0980392, 0.0980392, 1 )
corner_radius_top_left = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 1 )
corner_radius_top_right = 10
corner_radius_bottom_right = 10
shadow_color = Color( 0, 0, 0, 0 )

[sub_resource type="DynamicFont" id=1]
size = 9
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=2]
size = 6
font_data = ExtResource( 10 )

[node name="CharacterScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="MainContent" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="BorderColor" type="Label" parent="MainContent"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 41.0
margin_right = -50.0
margin_bottom = -49.0
rect_min_size = Vector2( 220, 90 )
custom_styles/normal = SubResource( 4 )

[node name="GridContainer" type="GridContainer" parent="MainContent/BorderColor"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -110.0
margin_top = -45.0
margin_right = 110.0
margin_bottom = 45.0
custom_constants/vseparation = 0
custom_constants/hseparation = -1
columns = 2

[node name="ColorCharacter" type="Label" parent="MainContent/BorderColor/GridContainer"]
margin_right = 111.0
margin_bottom = 90.0
rect_min_size = Vector2( 110, 90 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 5 )

[node name="CenterContainer" type="CenterContainer" parent="MainContent/BorderColor/GridContainer/ColorCharacter"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -38.0
margin_right = 50.0
margin_bottom = 38.0

[node name="CharacterContainer" type="Container" parent="MainContent/BorderColor/GridContainer/ColorCharacter/CenterContainer"]
margin_left = 50.0
margin_top = 38.0
margin_right = 50.0
margin_bottom = 38.0

[node name="Character" parent="MainContent/BorderColor/GridContainer/ColorCharacter/CenterContainer/CharacterContainer" instance=ExtResource( 4 )]

[node name="ColorText" type="Label" parent="MainContent/BorderColor/GridContainer"]
margin_left = 110.0
margin_right = 220.0
margin_bottom = 90.0
size_flags_horizontal = 11
size_flags_vertical = 3
custom_styles/normal = SubResource( 6 )

[node name="Container" type="GridContainer" parent="MainContent/BorderColor/GridContainer/ColorText"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="CharacterName" type="Label" parent="MainContent/BorderColor/GridContainer/ColorText/Container"]
margin_right = 88.0
margin_bottom = 10.0
rect_min_size = Vector2( 88, 0 )
custom_fonts/font = SubResource( 1 )
text = "Name"
autowrap = true

[node name="CharacterDetail" type="Label" parent="MainContent/BorderColor/GridContainer/ColorText/Container"]
margin_top = 14.0
margin_right = 88.0
margin_bottom = 21.0
rect_min_size = Vector2( 88, 0 )
custom_fonts/font = SubResource( 2 )
text = "Infoasdasdasdasdasd"
autowrap = true

[node name="Buttons" type="Control" parent="MainContent"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Back" type="TouchScreenButton" parent="MainContent/Buttons"]
position = Vector2( 8, 8 )
scale = Vector2( 0.1, 0.1 )
normal = ExtResource( 1 )
pressed = ExtResource( 6 )

[node name="Play" type="TouchScreenButton" parent="MainContent/Buttons"]
position = Vector2( 120, 144 )
scale = Vector2( 0.15, 0.15 )
normal = ExtResource( 2 )
pressed = ExtResource( 7 )

[node name="Map" type="TouchScreenButton" parent="MainContent/Buttons"]
position = Vector2( 296, 8 )
scale = Vector2( 0.1, 0.1 )
normal = ExtResource( 11 )
pressed = ExtResource( 8 )

[node name="PlayerNavigation" type="HBoxContainer" parent="MainContent"]
anchor_right = 1.0
margin_left = 110.0
margin_top = 8.0
margin_right = -104.0
margin_bottom = 30.0
custom_constants/separation = 4

[node name="Wallet" parent="MainContent" instance=ExtResource( 9 )]
margin_top = -31.0

[connection signal="buy" from="." to="." method="_on_CharacterScreen_buy"]
[connection signal="released" from="MainContent/Buttons/Back" to="." method="_on_Back_released"]
[connection signal="released" from="MainContent/Buttons/Map" to="." method="_on_Map_released"]
